[gd_scene load_steps=22 format=2]

[ext_resource path="res://sprites/background/space.png" type="Texture" id=1]
[ext_resource path="res://sprites/background/bg_stars.png" type="Texture" id=2]
[ext_resource path="res://sprites/background/bg_stars_2.png" type="Texture" id=3]
[ext_resource path="res://sprites/background/bg_stars_3.png" type="Texture" id=4]
[ext_resource path="res://Timer.gd" type="Script" id=5]
[ext_resource path="res://fx/music.ogg" type="AudioStream" id=6]
[ext_resource path="res://fx/menu.ogg" type="AudioStream" id=7]
[ext_resource path="res://travelling.gd" type="Script" id=8]
[ext_resource path="res://hero.tscn" type="PackedScene" id=9]
[ext_resource path="res://fx/game_over.ogg" type="AudioStream" id=10]
[ext_resource path="res://sprites/hud.png" type="Texture" id=11]
[ext_resource path="res://font/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://hud.gd" type="Script" id=13]
[ext_resource path="res://info.gd" type="Script" id=14]
[ext_resource path="res://blinking.gd" type="Script" id=15]
[ext_resource path="res://fx/title_voice.ogg" type="AudioStream" id=16]

[sub_resource type="DynamicFont" id=1]
size = 15
use_mipmaps = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 12 )

[node name="root" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="bg" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 2400 )

[node name="background" type="Sprite" parent="ParallaxBackground/bg"]
position = Vector2( -1, 0 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 400, 2400 )

[node name="stars" type="ParallaxLayer" parent="ParallaxBackground"]
motion_offset = Vector2( 0.5, 0.2 )
motion_mirroring = Vector2( 0, 2400 )

[node name="stars" type="Sprite" parent="ParallaxBackground/stars"]
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 400, 2400 )

[node name="stars_2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1, 0.5 )
motion_offset = Vector2( 0.7, 0.6 )
motion_mirroring = Vector2( 0, 2400 )

[node name="stars" type="Sprite" parent="ParallaxBackground/stars_2"]
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 400, 2400 )

[node name="stars_3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1, 0.1 )
motion_offset = Vector2( 0.7, 0.6 )
motion_mirroring = Vector2( 0, 2400 )

[node name="stars" type="Sprite" parent="ParallaxBackground/stars_3"]
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 400, 2400 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75
script = ExtResource( 5 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -4.0
autoplay = true

[node name="viewport" type="ViewportContainer" parent="."]
margin_right = 400.0
margin_bottom = 700.0

[node name="travelling" type="Camera2D" parent="viewport"]
anchor_mode = 0
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 8 )
bg_speed = 400

[node name="hero" parent="viewport/travelling" instance=ExtResource( 9 )]
position = Vector2( 156.963, 519.32 )
speed_boost = 100

[node name="gameover_fx" type="AudioStreamPlayer2D" parent="viewport/travelling/hero"]
stream = ExtResource( 10 )

[node name="hud2" type="Sprite" parent="viewport/travelling"]
position = Vector2( 1, 600 )
z_index = 90
texture = ExtResource( 11 )
centered = false

[node name="hud" type="RichTextLabel" parent="viewport/travelling/hud2"]
margin_left = 248.0
margin_top = 20.0
margin_right = 377.0
margin_bottom = 82.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Score
80000[/center]
[center]Highscore
4000[/center]"
text = "Score
80000
Highscore
4000"
script = ExtResource( 13 )

[node name="speed" type="RichTextLabel" parent="viewport/travelling/hud2"]
margin_left = 26.0
margin_top = 26.0
margin_right = 118.0
margin_bottom = 64.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]SPEED
800[/center]"
text = "SPEED
800"

[node name="bomb" type="RichTextLabel" parent="viewport/travelling/hud2"]
margin_left = 134.0
margin_top = 26.0
margin_right = 226.0
margin_bottom = 64.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]BOMB
3[/center]"
text = "BOMB
3"

[node name="titre" type="RichTextLabel" parent="viewport/travelling/hud2"]
margin_left = 1.0
margin_top = -500.0
margin_right = 398.0
margin_bottom = -270.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]
[img]res://sprites/hero/hero.png[/img]SPACE RANGERS[img]res://sprites/hero/hero.png[/img]
[/center]"
text = "
SPACE RANGERS
"

[node name="info" type="RichTextLabel" parent="viewport/travelling/hud2"]
margin_top = -272.0
margin_right = 399.0
margin_bottom = -167.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
script = ExtResource( 14 )

[node name="clignotant" type="RichTextLabel" parent="viewport/travelling/hud2"]
margin_left = -1.0
margin_top = -187.0
margin_right = 399.0
margin_bottom = -144.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
script = ExtResource( 15 )

[node name="timer_clignotant" type="Timer" parent="viewport/travelling/hud2/clignotant"]
wait_time = 0.6

[node name="spawn_pos" type="Position2D" parent="."]

[node name="title_voice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -6.0

[connection signal="timeout" from="Timer" to="Timer" method="_on_enemy_spawn"]
[connection signal="timeout" from="viewport/travelling/hud2/clignotant/timer_clignotant" to="viewport/travelling/hud2/clignotant" method="_on_timer_clignotant_timeout"]
